Upgrade version number to 3.1.7

--- a/notes.html
+++ b/notes.html
@@ -107,9 +107,15 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.6</h2>
+<h2 id="toc_1">3.1.7</h2>
 
-<h3 id="toc_2">Changes since 3.1.5</h3>
+<h3 id="toc_2">Change since 3.1.6</h3>
+
+<ul>
+<li>Fix incorrect escaping of some feeds</li>
+</ul>
+
+<h3 id="toc_3">Changes since 3.1.5</h3>
 
 <ul>
 <li>New set of default feeds, thanks to Jesse Claven and Ricky Morse</li>
