--- a/lproj/de.lproj/Vienna Help/keyboard.html
+++ b/lproj/de.lproj/Vienna Help/keyboard.html
@@ -7,9 +7,10 @@
 	<link rel="stylesheet" href="helpstyle.css" type="text/css"/>
 </head>
 <body>
+<a name="KeyboardSection"></a>
 <span><img src="images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Tastatur-Kürzel</span>
 <p>Ein Großteil der Funktionen in Vienna können über die Tastatur ausgeführt werden. Die notwendigen Tastatür-Kürzel werden im
-Menü neben dem jeweiligen Befehl angezeigt und werden im Folgenden beschrieben. Viele Bedienelemente in Vienna verfügen ausserdem 
+Menü neben dem jeweiligen Befehl angezeigt und werden im Folgenden beschrieben. Viele Bedienelemente in Vienna verfügen ausserdem
 über Kontext-Menüs, die durch einen Rechtsklick beziehungsweise durch Klicken und halten von Steuerung aktiviert werden können.
 
 You can use your keyboard to quickly accomplish many tasks in Vienna. To find the shortcuts for common Befehls, look in the menus
@@ -138,7 +139,7 @@ menus. To see a contextual menu, press the Steuerung key and click the item.</p>
   </tr>
   <tr>
     <td>Shift-Befehl-W</td>
-    <td>Schließt das Hauptfenster und verschiebt Vienna in den Hintergrund. Das Fenster kann durch einen Klick auf Vienna's 
+    <td>Schließt das Hauptfenster und verschiebt Vienna in den Hintergrund. Das Fenster kann durch einen Klick auf Vienna's
 	Dock-Icon oder das Kürzel Befehl-1 wieder hergestellt werden.</td>
   </tr>
   <tr>
