--- a/lproj/eus.lproj/Vienna Help/advanced.html
+++ b/lproj/eus.lproj/Vienna Help/advanced.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="helpstyle.css" type="text/css" />
 </head>
 <body>
+<a name="AdvancedSettingsSection"></a>
   <span><img src="images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class="header">Advanced
   Settings</span>
