--- a/lproj/nl.lproj/Vienna Help/keyboard.html
+++ b/lproj/nl.lproj/Vienna Help/keyboard.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="helpstyle.css" type="text/css" />
 </head>
 <body>
+<a name="KeyboardSection"></a>
   <span><img src="images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class=
   "header">Toetscombinaties</span>
