--- a/lproj/zh_TW.lproj/Vienna Help/keyboard.html
+++ b/lproj/zh_TW.lproj/Vienna Help/keyboard.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="helpstyle.css" type="text/css" />
 </head>
 <body>
+  <a name="KeyboardSection"></a>
   <span><img src="images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class="header">鍵盤快速鍵</span>
   <p>您以使用以下鍵盤快速鍵，在 Vienna 中快速完成許多工作。您可以在選單中、或是在下表中查閱相關鍵盤快速鍵。而在
