Remove Carbon dependency

--- a/Interfaces/cs.lproj/Vienna Help/keyboard.html
+++ b/Interfaces/cs.lproj/Vienna Help/keyboard.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="helpstyle.css" type="text/css"/>
 </head>
 <body>
+<a name="KeyboardSection"></a>
 <span><img src="images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Keyboard Shortcuts</span>
 <p>You can use your keyboard to quickly accomplish many tasks in Vienna. To find the shortcuts for common commands, look in the menus
 (or see the list at the bottom of this page). Many items in Vienna such as the folder pane and the article list pane also have contextual
@@ -212,7 +213,7 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
   </tr>
   <tr>
     <td>Command-F</td>
-    <td>Puts the input focus in the search field. Entering some text here and 
+    <td>Puts the input focus in the search field. Entering some text here and
 	pressing Enter will search for that text on the current web page.</td>
   </tr>
   <tr>
