--- a/Interfaces/da.lproj/Vienna Help/keyboard.html
+++ b/Interfaces/da.lproj/Vienna Help/keyboard.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="helpstyle.css" type="text/css"/>
 </head>
 <body>
+<a name="KeyboardSection"></a>
 <span><img src="images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Tastaturgenveje</span>
 <p>Du kan bruge dit tastatur til hurtigt at klare mange funktioner i Vienna. For at finde genveje for ofte brugte kommandoer, kig da i menuerne (eller se listen i bunden af denne side). Mange emner i Vienna, såsom mappefanen og artikellistefanen, har også contextual menuer. For at se en contextualmenu, hold Kontrol-tasten nede og klik på et emne.</p>
 <p>For at gøre en handling, tryk genvejstasterne indikeret nedenfor.</p>
