--- a/Interfaces/cs.lproj/Vienna Help/advanced.html
+++ b/Interfaces/cs.lproj/Vienna Help/advanced.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="helpstyle.css" type="text/css"/>
 </head>
 <body>
+<a name="AdvancedSettingsSection"></a>
 <span><img src="images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Advanced Settings</span>
 <p>The Advanced section of the Preferences provides options to change very specific settings in Vienna that are
 not essential for normal use but may resolve some issues as advised by the support forum. This page details the
