--- a/Interfaces/da.lproj/Vienna Help/advanced.html
+++ b/Interfaces/da.lproj/Vienna Help/advanced.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="helpstyle.css" type="text/css"/>
 </head>
 <body>
+<a name="AdvancedSettingsSection"></a>
 <span><img src="images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Avancerede indstillinger</span>
 <p>Sektionen for avancerede instillinerg giver mulighed for at ændre meget specifikke indstillinger i Vienna som ikke er essentielle for normal brug, men som kan klare nogle problemer som kan være bragt op på support-forummet. Denne sider detajlerer de avancerede indstillinger og deres funktioner.
 </p>
