--- a/Interfaces/de.lproj/Vienna Help/advanced.html
+++ b/Interfaces/de.lproj/Vienna Help/advanced.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <a name="AdvancedSettingsSection"></a>
   <span><img src="images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class="header">Erweiterte
   Einstellungen</span>
