--- a/Interfaces/ru.lproj/Vienna Help/keyboard.html
+++ b/Interfaces/ru.lproj/Vienna Help/keyboard.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="helpstyle.css" type="text/css" />
 </head>
 <body>
+<a name="KeyboardSection"></a>
   <span><img src="images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class="header">Keyboard
   Shortcuts</span>
