--- a/Vienna/Vienna Help/Resources/fr.lproj/faq.html
+++ b/Vienna/Vienna Help/Resources/fr.lproj/faq.html
@@ -16,7 +16,7 @@
   <p>Ci-dessous vous trouverez les questions les plus courantes à
   propos de Vienna lors de sa phase de beta-test. Reportez-vous à
   la page <a href=
-  "http://www.vienna-rss.org/vienna_faq.html">Official Vienna
+  "http://www.vienna-rss.com/vienna_faq.html">Official Vienna
   FAQ</a> (en anglais) pour les dernières astuces pour utiliser
   Vienna.</p>
   <ul>
@@ -238,7 +238,7 @@
   "How_do_I_create_my_own_styles">Comment créer mes propres styles
   ?</a></h2>
   <p>Voir la page <a href=
-  "http://www.vienna-rss.org/?page_id=65">Styles personnalisés</a>
+  "http://www.vienna-rss.com/?page_id=65">Styles personnalisés</a>
   pour les instructions.</p>
   <h2><a name="How_do_I_create_my_own_scripts" id=
   "How_do_I_create_my_own_scripts">Comment créer mes propres
