--- a/Vienna/Vienna Help/Resources/it.lproj/faq.html
+++ b/Vienna/Vienna Help/Resources/it.lproj/faq.html
@@ -15,7 +15,7 @@
   <p>Qui sotto ci sono alcune delle domande più comuni che ci sono
   state fatte su Vienna mentre veniva effettuato il test
   pre-rilascio. Vai alla <a href=
-  "http://www.vienna-rss.org/vienna_faq.html">Pagina FAQ Ufficiale
+  "http://www.vienna-rss.com/vienna_faq.html">Pagina FAQ Ufficiale
   di Vienna</a> per questi e i più recenti trucchi e suggerimenti
   per usare Vienna.</p>
   <ul>
@@ -54,7 +54,7 @@
   "Where_do_I_get_the_Vienna_source_code">Dove ottengo il codice
   sorgente di Vienna?</a></h2>
   <p>Vedi la <a href=
-  "http://www.vienna-rss.org/vienna_dev.html">pagina
+  "http://www.vienna-rss.com/vienna_dev.html">pagina
   Development</a> per istruzioni su come ottenere il codice
   sorgente di Vienna. Il codice sorgente è liberamente disponibile
   se sei interessato ad imparare come funziona Vienna, se vuoi
@@ -84,7 +84,7 @@
   "How_do_I_create_my_own_styles">Come faccio a creare i miei
   stili?</a></h2>
   <p>Vedi la <a href=
-  "http://www.vienna-rss.org/vienna_styles.html">pagina Custom
+  "http://www.vienna-rss.com/vienna_styles.html">pagina Custom
   Styles</a> per istruzioni.</p>
   <h2><a name="How_do_I_create_my_own_scripts" id=
   "How_do_I_create_my_own_scripts">ome faccio a creare i miei
@@ -94,10 +94,10 @@
   pagine risorse di Apple</a> per ulteriori dettagli.
   <p>Un modo per iniziare è scaricare uno degli script esistenti
   dalla <a href=
-  "http://www.vienna-rss.org/vienna_files.html">pagina Vienna
+  "http://www.vienna-rss.com/vienna_files.html">pagina Vienna
   Downloads</a> e visualizzarlo nell'editor AppleScript. Dai uno
   sguardo anche alla <a href=
-  "http://www.vienna-rss.org/vienna_scripting.html">pagina
+  "http://www.vienna-rss.com/vienna_scripting.html">pagina
   Scripts</a> per ulteriori dettagli sul dizionario di scripting di
   Vienna ed esempi di cosa puoi ottenere.</p>
   <p>Per pubblicare il tuo script, invialo a <a href=
