--- a/Vienna/Vienna Help/Resources/nl.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/nl.lproj/intro.html
@@ -90,7 +90,7 @@
   <p>Ontdek nog meer mogelijkheden van Vienna. U kunt de stilering
   van de artikelen veranderen door <b>Weergave → Stijl</b> te
   kiezen. Veel meer stijlen zijn te vinden op de <a href=
-  "http://www.vienna-rss.org/?page_id=76">Downloads</a> pagina van
+  "http://www.vienna-rss.com/?page_id=76">Downloads</a> pagina van
   de Vienna website samen met scripts waarmee u Vienna kan
   integreren met andere programma's op uw computer. Of
   experimenteer met slimme mappen om uw artikelen te organiseren
