--- a/Vienna/Vienna Help/Resources/pt.lproj/faq.html
+++ b/Vienna/Vienna Help/Resources/pt.lproj/faq.html
@@ -9,7 +9,7 @@
 <body>
 <span><img src="../shared/images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">How Do I?</span>
 <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested.
-See the <a href="http://www.vienna-rss.org/vienna_faq.html">Official Vienna FAQ Page</a> for these
+See the <a href="http://www.vienna-rss.com/vienna_faq.html">Official Vienna FAQ Page</a> for these
 and the latest hints and tips for using Vienna.
 </p>
 <ul>
@@ -192,7 +192,7 @@ the age of articles to auto-expire, change the
 that you haven't read these articles and thus leaves them alone.</p>
 
 <h2><a name="How_do_I_create_my_own_styles">How do I create my own styles?</a></h2>
-<p>See the <a href="http://www.vienna-rss.org/?page_id=65">Custom Styles page</a> for
+<p>See the <a href="http://www.vienna-rss.com/?page_id=65">Custom Styles page</a> for
 instructions.</p>
 
 <h2><a name="How_do_I_create_my_own_scripts">How do I create my own scripts?</a></h2>
