--- a/Vienna/Vienna Help/Resources/zh-Hant.lproj/faq.html
+++ b/Vienna/Vienna Help/Resources/zh-Hant.lproj/faq.html
@@ -13,7 +13,7 @@
   <span><img src="../shared/images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span><span class="header">我該怎麼做？</span>
   <p>您可以瀏覽 <a href=
-  "http://www.vienna-rss.org/vienna_faq.html">Vienna 官方 FAQ
+  "http://www.vienna-rss.com/vienna_faq.html">Vienna 官方 FAQ
   網頁</a>，查看最新的 Vienna 使用技巧。</p>
 </body>
 </html>
