Upgrade version number to 3.1.9

--- a/notes.html
+++ b/notes.html
@@ -108,14 +108,18 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.8</h2>
+<h2 id="toc_1">3.1.9</h2>
 
 <ul>
-<li>Fixed an External XML Entity (XXE) vulnerability which allowed servers to steal the content of files on the machine running Vienna</li>
-<li>Fix incorrect escaping of OPML export</li>
-<li>Fix font preferences not working</li>
-<li>Fix error on unread articles count with OpenReader feeds</li>
-<li>Fix articles&#39; list during feed refreshes when the current selection is a smart or group folder </li>
+<li>Change the website to vienna-rss.com as the old domain name (vienna-rss.org) could not be renewed. Perform a minor database evolution to update this.</li>
+<li>Add a plug-in supporting wallabag.it</li>
+<li>Show acknowledgements in &quot;About&quot; dialog box</li>
+<li>Fix del.icio.us URL</li>
+<li>Fix an issue with icon</li>
+<li>Change status bar icons to scalable pdfs</li>
+<li>Remove textures in some windows, change some .nib to .xib</li>
+<li>Refactor things (window preferences code, delegates, organization of help files …)</li>
+<li>Modernize build architecture (Xcode 8.2, update pods)</li>
 </ul>
 
 
