--- a/Vienna/Vienna Help/Resources/es.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/es.lproj/intro.html
@@ -12,7 +12,7 @@
   "" />&nbsp;&nbsp;</span> <span class="header">Introducción a
   Vienna</span>
   <p>Vienna es una aplicación que le permite leer las fuentes de
-  noticias RSS o Atom en su ordenador con Mac OS X. Automatiza el
+  noticias RSS o Atom en su ordenador con macOS. Automatiza el
   trabajo de conseguir artículos de noticias de todas las fuentes
   suscritas y las guarda en una base de datos local, lo que permite
   que los artículos también puedan ser leídos cuando no hay
