--- a/Vienna/Vienna Help/Resources/it.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/it.lproj/intro.html
@@ -13,7 +13,7 @@
   "" />&nbsp;&nbsp;</span> <span class="header">Introduzione a
   Vienna</span>
   <p>Vienna è un'applicazione che ti permette di leggere feed di
-  notizie in formato RSS o Atom sul tuo computer con Mac OSX.
+  notizie in formato RSS o Atom sul tuo computer con macOS.
   Automatizza il compito di recuperare i nuovi articoli da tutti i
   feed cui si è iscritti e di memorizzarli in un database locale
   per leggerli quando si è off-line. Fornisce caratteristiche che
