--- a/Vienna/Vienna Help/Resources/nl.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/nl.lproj/intro.html
@@ -11,7 +11,7 @@
   <span><img src="../shared/images/Small-Vienna-Logo.jpg" alt=
   "" />&nbsp;&nbsp;</span> <span class="header">Inleiding</span>
   <p>Vienna is een programma waarmee u RSS en Atom feeds kunt lezen
-  op uw Mac OS X computer. Het automatiseert het ophalen van nieuwe
+  op uw macOS computer. Het automatiseert het ophalen van nieuwe
   artikelen van uw abonnementen en bewaart deze in een lokale
   database zodat u hen ook offline kan lezen. U kunt artikelen
   doorzoeken op sleutelwoorden, markeren voor later en feeds
