--- a/Vienna/Vienna Help/Resources/ko.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/ko.lproj/intro.html
@@ -9,7 +9,7 @@
 <body>
 <span><img src="../shared/images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span>
 <span class="header">Introduction to Vienna</span>
-<p>Vienna is an application that allows you to read RSS or Atom news feeds on your Mac OS X computer. It automates the
+<p>Vienna is an application that allows you to read RSS or Atom news feeds on your macOS computer. It automates the
 job of retrieving news articles from all subscribed feeds and storing them in a local database for reading off-line. It
 provides features that allow you to search feeds for keywords or phrases, tag articles with a flag for future reference
 and organise related feeds together under groups. You can create smart folders that make it easy to dynamically retrieve
