Revert unnecessary changes

--- a/Vienna/Vienna Help/Resources/nl.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/nl.lproj/keyboard.html
@@ -219,7 +219,7 @@
     </tr>
     <tr>
       <td>⌘?</td>
-      <td>Toon het Vienna Help bestand, (macOS X 10.5 en later,
+      <td>Toon het Vienna Help bestand, (Mac OS X 10.5 en later,
       activeer de zoek functie in het Help bestand).</td>
     </tr>
     <tr>
