--- a/Vienna/Vienna Help/Resources/de.lproj/intro.html
+++ b/Vienna/Vienna Help/Resources/de.lproj/intro.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <span><img src="../shared/images/Small-Vienna-Logo.jpg" alt=""/>&nbsp;&nbsp;</span><span class="header">Einleitung zu Vienna</span>
-<p>Vienna ist ein Programm zum lesen und verwalten von RSS und Atom Feeds auf macOS Computern. Es automatisiert Aufgaben
-zum verwalten von Atikeln der abonnierten Feeds und speichert sie in einer lokalen Datenbank um die Artikel auch Offline
+<p>Vienna ist ein Programm zum lesen und verwalten von RSS und Atom Feeds auf Mac OSX Computern. Es automatisiert Aufgaben
+zum verwalten von Atikeln der abonnierten Feeds und speichert sie in einer lokalen Datenbank um die Artikel auch Offline 
 lesen zu können. Unterstützte Merkmale sind das Durchsuchen der Feeds nach Schlüsselwörtern und Phrasen, makieren ineressanter
 Artikel und zusammenfassen von Feeds in Gruppen. Sie können intelligente Ordner erstellen, die Artikel mit den von ihnen
 festgelegten Eigenschaften enthalten. Mit dem intekrierten Browser werden die Artikel Web-Seiten und Links direkt im Programm
