Upgrade version number to 3.1.11

--- a/notes.html
+++ b/notes.html
@@ -108,11 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.10</h2>
+<h2 id="toc_1">3.1.11</h2>
 
 <ul>
-<li>Fix access to Get Info window</li>
-<li>Fix CoreAnimation related problems</li>
+<li>Fix deleting article from smart folder or filtered folder</li>
+<li>Fix selection of last unread article with Next Unread command</li>
+<li>Update FMDB to 2.7.2</li>
 </ul>
 
 
