Upgrade version number to 3.1.14

--- a/notes.html
+++ b/notes.html
@@ -108,7 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.13</h2>
+<h2 id="toc_1">3.1.14</h2>
+
+<ul>
+<li>Fix article pane not updating on article deletion from the &#39;Unread Articles&#39; folder</li>
+</ul>
+
+<h2 id="toc_2">3.1.13</h2>
 
 <ul>
 <li>Fixes related to searching and smart folders</li>
