Upgrade version number to 3.1.15

--- a/notes.html
+++ b/notes.html
@@ -108,18 +108,17 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.14</h2>
+<h2 id="toc_1">3.1.15</h2>
+
+<ul>
+<li>Fix article list not scrolling to top when selecting a folder</li>
+<li>Fix &#39;Skip folder&#39; to not select the first article of the following folder if in the current folder, no article is selected</li>
+</ul>
+
+<h2 id="toc_2">3.1.14</h2>
 
 <ul>
 <li>Fix article pane not updating on article deletion from the &#39;Unread Articles&#39; folder</li>
-</ul>
-
-<h2 id="toc_2">3.1.13</h2>
-
-<ul>
-<li>Fixes related to searching and smart folders</li>
-<li>Fix for selection of first article when jumping on next feed</li>
-<li>Better fix for unwanted reload of the article currently being read during sync</li>
 </ul>
 
 
