Upgrade version number to 3.2.0

--- a/notes.html
+++ b/notes.html
@@ -108,53 +108,26 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.2.0 rc 1</h2>
+<h2 id="toc_1">Vienna 3.2.0</h2>
 
-<h3 id="toc_2">! For OS X 10.9 or later only !</h3>
+<p>Vienna 3.2.0 is a significant step in an ongoing effort to modernize Vienna codebase.</p>
+
+<p>There are a few user interface changes : </p>
 
 <ul>
-<li>Fix some OpenReader error handling</li>
-<li>Remove a tab bar animation introduced in 3.2.0 Beta 1</li>
-<li>Update copyright information</li>
+<li>New toolbar icons,</li>
+<li>Acknowledgements have been moved into the &quot;About Vienna&quot; panel,</li>
+<li>Through a feed&#39;s &quot;Get Info…&quot; panel, examination of the RSS/Atom code is done by call of the external application associated to the file type,</li>
 </ul>
 
-<h2 id="toc_3">3.2.0 Beta 3</h2>
+<p>but most important changes are internal.</p>
+
+<p><strong><em>Vienna 3.2.0 requires OS X 10.9 or later</em></strong>.</p>
+
+<h3 id="toc_2">Changes from 3.2.0 RC 1</h3>
 
 <ul>
-<li>Fix persistent tab bar at launch</li>
-<li>Update FMDB to 2.7.4</li>
-</ul>
-
-<h2 id="toc_4">3.2.0 Beta 2</h2>
-
-<ul>
-<li>Fix crashes on systems prior to Sierra</li>
-</ul>
-
-<h2 id="toc_5">3.2.0 Beta 1</h2>
-
-<h3 id="toc_6">! For OS X 10.9 or later only !</h3>
-
-<ul>
-<li>New toolbar icons</li>
-<li>Use default external application to view content of cached XML files</li>
-<li>Show acknowledgements in &quot;About&quot; panel</li>
-<li>Technical updates :
-
-<ul>
-<li>Converted NIBs to XIBs and to Auto Layout</li>
-<li>Moved translation system to Base localization and Crowdin</li>
-<li>Refactored some UI elements to separate XIB files</li>
-<li>Refactorings (to KVO or delegate patterns, and conversion of various elements to properties)</li>
-<li>Change OpenReader to use asynchronous requests</li>
-<li>Update to Xcode 9</li>
-<li>Conversion of code for some UI elements to Swift4</li>
-<li>Replace CDEvents with Swift-based FSEvents implementation</li>
-<li>Update autorevision to 1.20</li>
-<li>Update Sparkle to 1.18.1</li>
-<li>Update MASPreferences to 1.3.0</li>
-<li>plus various housekeeping changes…</li>
-</ul></li>
+<li>The application is downloaded in a .tgz archive.</li>
 </ul>
 
 
