Update notes for version 3.2.1

--- a/notes.html
+++ b/notes.html
@@ -108,26 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">Vienna 3.2.0</h2>
-
-<p>Vienna 3.2.0 is a significant step in an ongoing effort to modernize Vienna codebase.</p>
-
-<p>There are a few user interface changes : </p>
+<h2 id="toc_1">3.2.1</h2>
 
 <ul>
-<li>New toolbar icons,</li>
-<li>Acknowledgements have been moved into the &quot;About Vienna&quot; panel,</li>
-<li>Through a feed&#39;s &quot;Get Info…&quot; panel, examination of the RSS/Atom code is done by call of the external application associated to the file type,</li>
-</ul>
-
-<p>but most important changes are internal.</p>
-
-<p><strong><em>Vienna 3.2.0 requires OS X 10.9 or later</em></strong>.</p>
-
-<h3 id="toc_2">Changes from 3.2.0 RC 1</h3>
-
-<ul>
-<li>The application is downloaded in a .tgz archive.</li>
+<li>Fix a crash on parsing some XML files</li>
+<li>Fix current feed URL not being displayed on edition of a feed</li>
+<li>Updated translations (Danish, Spanish, German, Russian)</li>
 </ul>
 
 
