Upgrade version number to 3.3.0

--- a/notes.html
+++ b/notes.html
@@ -108,19 +108,22 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.3.0 rc 1</h2>
+<h2 id="toc_1">3.3.0</h2>
 
-<ul>
-<li>Fix a problem with Sparkle autoupdate</li>
-</ul>
-
-<h2 id="toc_2">3.3.0 Beta 1</h2>
+<h3 id="toc_2">Changes since 3.2.1</h3>
 
 <ul>
 <li>Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it</li>
 <li>Change default download location to the macOS default one</li>
 <li>Fix bug where &quot;Show in Finder&quot; in Downloads window didn&#39;t work unless file was fully downloaded</li>
+<li>Improve Ukrainian localization</li>
 <li>Update developer documentation &amp; change tests configuration</li>
+</ul>
+
+<h3 id="toc_3">Changes since 3.3.0 rc 1</h3>
+
+<ul>
+<li>Improve Ukrainian localization</li>
 </ul>
 
 
