Improve French translation for article list shortcut

--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -260,10 +260,6 @@
       <td>Shift-⌘-U</td>
       <td>Marque les articles sélectionnés comme étant lus.</td>
     </tr>
-	<tr>
-		<td>Command-Y</td>
-		<td>Opens the article list tab.</td>
-	</tr>
     <tr>
       <td>Alt-⌘-S</td>
       <td>Ouvre l'application de messagerie par défaut et crée un
@@ -316,6 +312,10 @@
     <tr>
       <td>Alt-⌘-Droite</td>
       <td>Affiche l'onglet suivant.</td>
+    </tr>
+    <tr>
+      <td>⌘-Y</td>
+      <td>Sélectionne l'onglet contenant le liste des articles.</td>
     </tr>
     <tr>
       <td>⌘-M</td>
