Upgrade version number to 3.4.0
Also fix a small typo in French help file

--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -315,7 +315,7 @@
     </tr>
     <tr>
       <td>⌘-Y</td>
-      <td>Sélectionne l'onglet contenant le liste des articles.</td>
+      <td>Sélectionne l'onglet contenant la liste des articles.</td>
     </tr>
     <tr>
       <td>⌘-M</td>
