--- a/notes.html
+++ b/notes.html
@@ -108,7 +108,9 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.4.0 Beta 1</h2>
+<h2 id="toc_1">3.4.0</h2>
+
+<h3 id="toc_2">Changes since 3.3.0</h3>
 
 <ul>
 <li>New article menu and keyboard shortcut (Command-Y) to get back to the main tab (articles list)</li>
@@ -120,6 +122,14 @@ sup {
 <li>New framework for managing tabs (MMTabBarView instead of PSMTabBarControl)</li>
 <li>Use Carthage instead of Cocoapods to manage dependencies</li>
 <li>Project cleanup and reorganization</li>
+</ul>
+
+<h3 id="toc_3">Changes since 3.4.0 Beta 1</h3>
+
+<ul>
+<li>Initial update for Xcode 10</li>
+<li>Update for SwiftLint 0.25.1</li>
+<li>Update Crowdin configuration for Brazilian Portuguese</li>
 </ul>
 
 
