Upgrade version number to 3.4.1

--- a/notes.html
+++ b/notes.html
@@ -108,28 +108,10 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.4.0</h2>
-
-<h3 id="toc_2">Changes since 3.3.0</h3>
+<h2 id="toc_1">3.4.1</h2>
 
 <ul>
-<li>New article menu and keyboard shortcut (Command-Y) to get back to the main tab (articles list)</li>
-<li>New &quot;Share With Pinboard&quot; plugin</li>
-<li>Remove obsolete Cocoalicious plugin</li>
-<li>New lithuanian translation, contributed by Andrius Družinis-Vitkus</li>
-<li>Improved Czech, Simplified Chinese, Galician and Russian translations</li>
-<li>Fix a bug that prevented adding a feed in Simplified Chinese</li>
-<li>New framework for managing tabs (MMTabBarView instead of PSMTabBarControl)</li>
-<li>Use Carthage instead of Cocoapods to manage dependencies</li>
-<li>Project cleanup and reorganization</li>
-</ul>
-
-<h3 id="toc_3">Changes since 3.4.0 Beta 1</h3>
-
-<ul>
-<li>Initial update for Xcode 10</li>
-<li>Update for SwiftLint 0.25.1</li>
-<li>Update Crowdin configuration for Brazilian Portuguese</li>
+<li>Fix crash on startup on Mac OS X 10.9 and 10.10</li>
 </ul>
 
 
