Improve right-to-left support in Vienna styles
Also add sizes and ratios fixes to Serifim styles

--- a/Vienna/SharedSupport/Styles/Minimalista Sans-serif.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Minimalista Sans-serif.viennastyle/template.html
@@ -8,7 +8,7 @@
     	<!-- cond:noblank--><span class="articleAuthorStyle">$ArticleAuthor$</span><!-- end-->
         <!-- cond:noblank--><span class="articleEnclosureStyle"><a href="$ArticleEnclosureLink$">$ArticleEnclosureFilename$</a></span><!-- end-->
     </div>
-    <div class="main">
+    <div class="main" dir="auto">
         $ArticleBody$
     </div>
 </div>
