--- a/Vienna/SharedSupport/Styles/Papes.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Papes.viennastyle/template.html
@@ -10,7 +10,7 @@
             <span class="articleDateStyle">$ArticleDate$</span>
         </div>
     </div>
-    <div class="articleBodyStyle">
+    <div class="articleBodyStyle" dir="auto">
         $ArticleBody$
     </div>
 </div>
