--- a/Vienna/SharedSupport/Styles/Serifim Dark.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Serifim Dark.viennastyle/template.html
@@ -7,7 +7,7 @@
       <div class="articleDate">$ArticleDate$</div>
     </section>
   </header>
-  <div class="articleBody">
+  <div class="articleBody" dir="auto">
     $ArticleBody$
   </div>
 </div>
