--- a/Vienna/SharedSupport/Styles/Xcast.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Xcast.viennastyle/template.html
@@ -1,7 +1,7 @@
 <div id="feedHeading">
 	<a href="$ArticleLink$">$ArticleTitle$</a>
 </div>
-<div id="entryDescription">
+<div id="entryDescription" dir="auto">
 	$ArticleBody$
 </div>
 <div id="otherInfo">
