--- a/Vienna/SharedSupport/Styles/Classy.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Classy.viennastyle/template.html
@@ -4,7 +4,7 @@
 	<div>
 		<h1 class="title"><a href="$ArticleLink$">$ArticleTitle$</a></h1>
 	</div>
-	<div class="content">
+	<div class="content" dir="auto">
 		$ArticleBody$
 	</div>
 </div>
