--- a/Vienna/SharedSupport/Styles/FeedLight Aqua.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/FeedLight Aqua.viennastyle/template.html
@@ -8,7 +8,7 @@
 </p>
 </div>
 	
-<div class="body">
+<div class="body" dir="auto">
 <div class="content">
 $ArticleBody$
 <div class="clearAll">&nbsp;</div>
