--- a/Vienna/SharedSupport/Styles/Perlucida.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Perlucida.viennastyle/template.html
@@ -5,5 +5,5 @@
 
 </ul>
 <h1 id="viennatitle"><a href="$ArticleLink$">$ArticleTitle$</a></h1>
-<div id="viennabody">$ArticleBody$</div>
+<div id="viennabody" dir="auto">$ArticleBody$</div>
 <div id="viennafeedlink"><a href="$FeedLink$">$FeedTitle$</a></div>
