--- a/Vienna/SharedSupport/Styles/Tyger graphite.viennastyle/template.html
+++ b/Vienna/SharedSupport/Styles/Tyger graphite.viennastyle/template.html
@@ -9,7 +9,7 @@
           <span class="articleEnclosureStyle"><a href="$ArticleEnclosureLink$">$ArticleEnclosureFilename$</a></span>
         <!-- end-->
     </div>
-    <div class="articleBodyStyle">
+    <div class="articleBodyStyle" dir="auto">
         $ArticleBody$
     </div>
     <div class="articleDetails">
