Upgrade version number to 3.5.0 rc 1

--- a/notes.html
+++ b/notes.html
@@ -108,11 +108,14 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.0 Beta 1</h2>
+<h2 id="toc_1">3.5.0 rc 1</h2>
 
 <ul>
-<li>Modernize network access (replace ASIHTTPRequest with a wrapper above NSURLSession)</li>
-<li>Fix an encoding issue in localizable strings</li>
+<li>Initial adaptations to macOS Mojave&#39;s dark mode (work in progress)</li>
+<li>Improve right to left support</li>
+<li>Improve tab bar management ; fix video which continued to play when last tab was closed</li>
+<li>Fix background color of selected folder on OS X 10.9</li>
+<li>Update FMDB to 2.7.5</li>
 </ul>
 
 
