Upgrade version number to 3.5.1

--- a/notes.html
+++ b/notes.html
@@ -108,26 +108,18 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.0</h2>
-
-<h3 id="toc_2">Changes since 3.4.2</h3>
+<h2 id="toc_1">3.5.1</h2>
 
 <ul>
-<li>Initial adaptations to macOS Mojave&#39;s dark mode (work in progress)</li>
-<li>Modernize network access (replace ASIHTTPRequest with a wrapper above NSURLSession). Vienna&#39;s memory management is now exclusively based on Automatic Reference Counting.</li>
-<li>Improve tab bar management ; fix video which continued to play when last tab was closed</li>
-<li>Improve support of Emoji characters</li>
-<li>Improve right to left support</li>
-<li>Fix background color of selected folder on OS X 10.9</li>
-<li>Fix an encoding issue in localizable strings</li>
-<li>Update FMDB to 2.7.5</li>
-</ul>
-
-<h3 id="toc_3">Changes since 3.5.0 rc 1</h3>
-
-<ul>
-<li>Fix dark mode for horizontal layout</li>
-<li>Improve support of Emoji characters (use CoreText to draw cells)</li>
+<li>Add ‘Open With’ submenu to contextual menu for items in Downloads window</li>
+<li>Allow ‘Open’ in Downloads window even when file is not yet fully downloaded (handy for audio files)</li>
+<li>Improve tabs&#39; support of macOS Mojave&#39;s dark mode</li>
+<li>Fix fetching of feeds from OpenReader server</li>
+<li>Sync OpenReader feed names</li>
+<li>Fix feed unsubscribes and moves for TheOldReader</li>
+<li>Fix alignment of feed/folders names which are in Arabic</li>
+<li>Fix double escaping on feed title / description in OPML files</li>
+<li>Update development team in About box</li>
 </ul>
 
 
