Upgrade version number to 3.5.2

--- a/notes.html
+++ b/notes.html
@@ -108,18 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.1</h2>
+<h2 id="toc_1">3.5.2</h2>
 
 <ul>
-<li>Add ‘Open With’ submenu to contextual menu for items in Downloads window</li>
-<li>Allow ‘Open’ in Downloads window even when file is not yet fully downloaded (handy for audio files)</li>
-<li>Improve tabs&#39; support of macOS Mojave&#39;s dark mode</li>
-<li>Fix fetching of feeds from OpenReader server</li>
-<li>Sync OpenReader feed names</li>
-<li>Fix feed unsubscribes and moves for TheOldReader</li>
-<li>Fix alignment of feed/folders names which are in Arabic</li>
-<li>Fix double escaping on feed title / description in OPML files</li>
-<li>Update development team in About box</li>
+<li>Fix behavior when a Javascript attemps to close a tab</li>
+<li>Refactor browser pane / browser dependency</li>
+<li>Update Sparkle to 1.21.1</li>
 </ul>
 
 
