Upgrade version number to 3.5.4

--- a/notes.html
+++ b/notes.html
@@ -108,21 +108,23 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.3</h2>
+<h2 id="toc_1">3.5.4</h2>
 
 <ul>
-<li>Fix crash with problematic feed</li>
-<li>Fix parsing of feeds without titles</li>
-<li>Use basic preemptive authentication to work around some servers which do not send 401 challenges</li>
-<li>Fix update of tabs color when window gains/loses focus</li>
-<li>Prevent Vienna from appearing among dedicated browser applications in System Preferences/General</li>
-<li>Fix usability problem with search box</li>
-<li>Add DuckDuckGo and Qwant among options for search box</li>
-<li>Fix Twitter option for search box</li>
-<li>Use https for searching</li>
-<li>Add support for dark mode to Credits</li>
-<li>Fix tooltips in folders tree</li>
-<li>Update Sparkle to 1.21.2, autorevision to 1.21</li>
+<li>Fix dialog sheet handling definition of smart folders with multiple criteria</li>
+<li>Use w3.org feed validator instead of feedvalidator.org</li>
+<li>Modify User-Agent header used for fetching feeds (fix problem with Oxford University Press)</li>
+<li>On macOS Mojave, fix authorization for plugins using AppleScript</li>
+<li>Fix &#39;Add to Safari Reading List&#39; plugin regarding articles with empty body</li>
+<li>Some improvements to macOS Mojave&#39;s dark mode</li>
+<li>Make article list&#39;s progress indicators less prominent</li>
+<li>Trim unneeded whitespaces in URLs of new subscriptions</li>
+<li>Optimize builtin images (losslessly reduce size of PNG and JPEG)</li>
+<li>Replace deprecated SDK calls</li>
+<li>Make process and logs more verbose regarding OpenReader server login failures</li>
+<li>Update Swift support to version 4.2</li>
+<li>Optimize Info.plist</li>
+<li>Optimize build</li>
 </ul>
 
 
