Upgrade version number to 3.5.5

--- a/notes.html
+++ b/notes.html
@@ -108,24 +108,23 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.4</h2>
+<h2 id="toc_1">3.5.5</h2>
 
 <ul>
-<li>Fix dialog sheet handling definition of smart folders with multiple criteria</li>
-<li>Use w3.org feed validator instead of feedvalidator.org</li>
-<li>Modify User-Agent header used for fetching feeds (fix problem with Oxford University Press)</li>
-<li>On macOS Mojave, fix authorization for plugins using AppleScript</li>
-<li>Fix &#39;Add to Safari Reading List&#39; plugin regarding articles with empty body</li>
-<li>Some improvements to macOS Mojave&#39;s dark mode</li>
-<li>Make article list&#39;s progress indicators less prominent</li>
-<li>Trim unneeded whitespaces in URLs of new subscriptions</li>
-<li>Optimize builtin images (losslessly reduce size of PNG and JPEG)</li>
-<li>Replace deprecated SDK calls</li>
-<li>Make process and logs more verbose regarding OpenReader server login failures</li>
-<li>Update Swift support to version 4.2</li>
-<li>Optimize Info.plist</li>
-<li>Optimize build</li>
+<li>Fix sizes of cells in Unified view</li>
+<li>Fix our own RSS URL</li>
+<li>Fix multiple problems with input and encoding of OpenReader credentials</li>
+<li>fix selection of next unread article through spacebar when the article view is empty</li>
+<li>Update link templates for zh-Hant language</li>
+<li>Update Swift support to version 5</li>
+<li>Udate to Xcode 11</li>
+<li>Update Sparkle version to 1.22</li>
+<li>Improve build system</li>
+<li>Replace deprecated routines</li>
+<li>Fix some problem with processing of localizable strings</li>
 </ul>
+
+<p><strong>Note</strong> : this version will upgrade the database ; but the newer version of the database remains fully compatible with all Vienna 3.x.x versions. So there is no reason to fear upgrading, or at least testing this 3.5.5 version.</p>
 
 
 
