Upgrade version number to 3.6.0 Beta 3

--- a/notes.html
+++ b/notes.html
@@ -108,32 +108,39 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.6.0 Beta 2</h2>
+<h2 id="toc_1">3.6.0 Beta 3</h2>
+
+<ul>
+<li>Configure Github configuration to close abandoned issues</li>
+</ul>
+
+<h2 id="toc_2">3.6.0 Beta 2</h2>
 
 <ul>
 <li>Replace deprecated methods</li>
 <li>Remove support of Bitly URL shortening in plugins</li>
 </ul>
 
-<h2 id="toc_2">3.6.0 Beta 1</h2>
+<h2 id="toc_3">3.6.0 Beta 1</h2>
 
-<h3 id="toc_3">! For OS X 10.11 (El Capitan) or later only !</h3>
+<h3 id="toc_4">! For OS X 10.11 (El Capitan) or later only !</h3>
 
 <ul>
 <li>Lift deployment target to macOS 10.11 &amp; start modernizing code</li>
 <li>Replaced MASPreferences with Storyboard implementation (Preferences window)</li>
 </ul>
 
-<h2 id="toc_4">3.5.7</h2>
+<h2 id="toc_5">3.5.8</h2>
 
 <ul>
-<li>Fix file being hidden at end of &quot;Download image&quot;</li>
-<li>Fix crash on editing search folder</li>
-<li>Fix inaccurate information about number of unread articles</li>
-<li>Fix wrong behaviour of &quot;Move articles to Trash: After a Month&quot; preference</li>
-<li>Remove Google+ plugin ; replace it with Google Currents plugin</li>
-<li>Increase to 1000 the limit of articles fetched at once from an Open Reader feed</li>
-<li>Update Sparkle to v1.23.0 and MMTabBarView to v/1.4.7</li>
+<li>Fix crash related to macOS Big Sur Beta</li>
+<li>Fix crash related to Xcode12 (update MMTabBarView to v/1.4.8)</li>
+<li>Fix tab bar to hide when a single tab is present</li>
+<li>More fix for inaccurate info on number of unread articles</li>
+<li>Fix to unread counts discrepancies on OpenReader feeds</li>
+<li>Avoid intempestive refreshes of article pane during feed refreshes</li>
+<li>Fix resetting of article pane when no article is selected anymore and &quot;Use Web Pages for Articles&quot; is enabled</li>
+<li>Fix Vienna Tests target</li>
 </ul>
 
 
