ct:	Upgrade version number to 3.6.0 Beta 4

--- a/notes.html
+++ b/notes.html
@@ -108,39 +108,45 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.6.0 Beta 3</h2>
+<h2 id="toc_1">3.6.0 Beta 4</h2>
+
+<ul>
+<li>Udate to Xcode 12</li>
+</ul>
+
+<h2 id="toc_2">3.6.0 Beta 3</h2>
 
 <ul>
 <li>Configure Github configuration to close abandoned issues</li>
 </ul>
 
-<h2 id="toc_2">3.6.0 Beta 2</h2>
+<h2 id="toc_3">3.6.0 Beta 2</h2>
 
 <ul>
 <li>Replace deprecated methods</li>
-<li>Remove support of Bitly URL shortening in plugins</li>
 </ul>
 
-<h2 id="toc_3">3.6.0 Beta 1</h2>
+<h2 id="toc_4">3.6.0 Beta 1</h2>
 
-<h3 id="toc_4">! For OS X 10.11 (El Capitan) or later only !</h3>
+<h3 id="toc_5">! For OS X 10.11 (El Capitan) or later only !</h3>
 
 <ul>
 <li>Lift deployment target to macOS 10.11 &amp; start modernizing code</li>
 <li>Replaced MASPreferences with Storyboard implementation (Preferences window)</li>
 </ul>
 
-<h2 id="toc_5">3.5.8</h2>
+<h2 id="toc_6">3.5.9</h2>
 
 <ul>
-<li>Fix crash related to macOS Big Sur Beta</li>
-<li>Fix crash related to Xcode12 (update MMTabBarView to v/1.4.8)</li>
-<li>Fix tab bar to hide when a single tab is present</li>
-<li>More fix for inaccurate info on number of unread articles</li>
-<li>Fix to unread counts discrepancies on OpenReader feeds</li>
-<li>Avoid intempestive refreshes of article pane during feed refreshes</li>
-<li>Fix resetting of article pane when no article is selected anymore and &quot;Use Web Pages for Articles&quot; is enabled</li>
-<li>Fix Vienna Tests target</li>
+<li>Add toolbar icon for deleting articles</li>
+<li>Parse more tags from &#39;media&#39; namespace to get YouTube descriptions</li>
+<li>Remove support of Bitly URL shortening in plugins</li>
+<li>Speed up the cleaning of URL strings</li>
+<li>Speed up parsing of date strings</li>
+<li>Prevent crash when parsing non XML data</li>
+<li>Fix empty ArticleView on returning to same article</li>
+<li>Update to MMTabBarView v/1.4.9</li>
+<li>Fix running individual Xcode tests</li>
 </ul>
 
 
